Update add new font, opengraph image and metadata in each writings slug page

--- a/app/globals.css
+++ b/app/globals.css
@@ -20,6 +20,7 @@
   --color-suram: var(--suram);
   --font-roboto: var(--font-roboto-mono);
   --font-geist: var(--font-geist-mono);
+  --font-schoolbell: var(--font-schoolbell);
   --shadow-shadow: var(--shadow);
 }
 
