--- a/app/globals.css
+++ b/app/globals.css
@@ -21,6 +21,8 @@
   --font-roboto: var(--font-roboto-mono);
   --font-geist: var(--font-geist-mono);
   --font-schoolbell: var(--font-schoolbell);
+  --font-source: var(--font-source-serif);
+  --font-satoshi: var(--font-satoshi);
   --shadow-shadow: var(--shadow);
 }
 
@@ -30,4 +32,25 @@ body {
 
 p {
   @apply leading-relaxed;
+}
+
+.style-prose {
+  @apply mt-12 max-w-full;
+  @apply prose-a:underline;
+  @apply prose-headings:font-satoshi;
+  @apply prose-h1:text-[30px] md:prose-h1:text-[38px] prose-h1:font-black prose-h1:mb-16;
+  @apply prose-h2:text-2xl prose-h2:font-black prose-h2:mt-10 prose-h2:mb-1 md:prose-h2:mb-3;
+  @apply prose-ul:list-disc prose-ul:pl-8 prose-ul:my-5 md:prose-ul:my-6.5;
+  @apply prose-ol:list-decimal prose-ol:pl-8 prose-ol:my-5 md:prose-ol:my-6.5;
+  @apply prose-li:my-4 prose-li:leading-relaxed prose-li:text-[20px];
+  @apply prose-p:font-normal prose-p:text-[20px];
+  @apply prose-pre:my-12 prose-pre:p-8 prose-pre:font-roboto;
+
+  & :not(pre) > code {
+    @apply bg-suram px-1.5 py-0.5 font-roboto font-normal text-[14px];
+    &::before,
+    &::after {
+      content: none;
+    }
+  }
 }
